---
config:
    theme: redux-dark-color
id: d7fccb09-ca00-4c54-95aa-b75fb2248efb
---
erDiagram
    ROL ||--o{ USUARIO : "tiene"
    PRODUCTO ||--o{ LOG_ACCION_USUARIO : "afecta"
    CATEGORIA ||--o{ SUBCATEGORIA : "clasifica"
    METODOPAGO ||--o{ PEDIDO: "utiliza"
    SUBCATEGORIA ||--o{ PRODUCTO_SUBCATEGORIA : "incluye"
    PRODUCTO ||--o{ PRODUCTO_SUBCATEGORIA : "tiene"
    PEDIDO ||--|{ DETALLEPEDIDO : "contiene"
    PRODUCTO ||--o{ DETALLEPEDIDO : "incluido en"
    USUARIO ||--o{ LOG_ACCION_USUARIO : "realiza"
    ACCION ||--o{ LOG_ACCION_USUARIO : "registra"
    

    USUARIO {
        int id_usuario PK
        string username
        string email
        string password
        date fecha_registro
        int id_rol FK
    }

    ROL {
        int id_rol PK
        string nombre
    }

    PEDIDO {
        int id_pedido PK
        date fecha
        string nombre_cliente
        decimal total
        int id_metodopago FK
    }

    METODOPAGO {
        int id_metodopago PK
        string nombre
        boolean activo
    }

    DETALLEPEDIDO {
        int id_detalle PK
        int id_pedido FK
        int id_producto FK
        int cantidad
        decimal precio_unitario
    }

    PRODUCTO {
        int id_producto PK
        string nombre
        decimal precio
        string imagen
        string descripcion
        boolean activo
    }

    CATEGORIA {
        int id_categoria PK
        string nombre
    }

    SUBCATEGORIA {
        int id_subcategoria PK
        string nombre
        int id_categoria FK
    }

    PRODUCTO_SUBCATEGORIA {
        int id_producto_subcategoria PK
        int id_producto FK
        int id_subcategoria FK
    }

    LOG_ACCION_USUARIO {
        int id_log PK
        int id_usuario FK
        int id_accion FK
        int id_producto FK
        date fecha_hora
    }

    ACCION {
        int id_accion PK
        string nombre
    }